crates/toml_edit/tests/snapshots/invalid/ext/datetime/month-zero.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-00-09T09:09:09.09Z
  |       ^^^^^^^^^^^^^^^^^^^^^^^
invalid date, expected month between 01 and 12
